[package]
name = "winwrap"
version = "0.0.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A wrapper around minifb to make managing windows easier than ever"

[lib]
name = "winwrap"
path = "src/lib.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24.0"
