[package]
name = "minifb_wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A wrapper around minifb to make managing windows easier than ever"
repository = "https://github.com/JamieH01/winwrap"
keywords = ["graphics", "graph", "color"]
catagories = ["graphics", "visualization"]

[lib]
name = "miniwrap"
path = "src/lib.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24.0"
